do not expand sidebar to full width on mobile, but up the min-width, fix #19915

--- a/core/css/apps.css
+++ b/core/css/apps.css
@@ -445,7 +445,7 @@
 	left: auto;
 	bottom: 0;
 	width: 27%;
-	min-width: 250px;
+	min-width: 300px;
 	display: block;
 	background: #fff;
 	border-left: 1px solid #eee;
