--- a/core/css/mobile.css
+++ b/core/css/mobile.css
@@ -73,10 +73,6 @@
 	z-index: 1000;
 }
 
-#app-sidebar{
-	width: 100% !important;
-}
-
 /* allow horizontal scrollbar in settings
 	otherwise user management is not usable on mobile */
 #body-settings #app-content {
